# omepyrgen

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  setup.cfg  setup.py
.github/workflows/: wheel_build.yml  win_build.yml
ci-utils/: install_prereq_linux.sh  install_prereq_win.bat  install_win_prereq.bat
src/: downsample.h  ome_tiff_to_zarr_converter.cpp  ome_tiff_to_zarr_converter.h  ome_tiff_to_zarr_pyramid.cpp  ome_tiff_to_zarr_pyramid.h  utilities.cpp  utilities.h  utils.h  zarr_base_to_pyr_gen.cpp  zarr_base_to_pyr_gen.h  zarr_pyramid_assembler.cpp  zarr_pyramid_assembler.h  zarr_pyramid_writer.cpp  zarr_pyramid_writer.h
src/python/: pyramid_python_interface.cpp
src/python/omepyrgen/: __init__.py  _version.py  pyramid_generator.py  test.py  zarr_pyramid_writer.py
src/ts_driver/ometiff/: driver.cc  metadata.cc
src/ts_driver/tiled_tiff/: omexml.cc  tiled_tiff_key_value_store.cc
tests/: main.cpp
tests/python/: test.py
